Re-work goodies to be fully generable from json. Add link to it on CV

--- a/app/styles/cv.styl
+++ b/app/styles/cv.styl
@@ -36,7 +36,7 @@ body.cv
             width: auto
             height: auto
             margin-right: 0.5em
-            &::after
+            &:not(.no_print)::after
                 content:  attr(title)
 
     & > div.main
