--- a/app/styles/portfolio.styl
+++ b/app/styles/portfolio.styl
@@ -36,6 +36,8 @@ div.goodies
 
     & > a.sub_link
         flex: 1 0 20%
+        max-width: 25%
+        margin-bottom: 1em
         padding: 1em
         height: 150px
         background-size: contain
