Make gallery more scalable through vmin

--- a/app/styles/common.styl
+++ b/app/styles/common.styl
@@ -83,14 +83,13 @@ nav.site
                     display: block
                     padding: 0px
 
+html
+    height: 100%
+
 body.site
     display: flex
     flex-flow: column
-    position: fixed
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
+    height: 100%
     & > nav.site
         z-index: 1
     & > div.sub_page
