--- a/app/styles/portfolio.styl
+++ b/app/styles/portfolio.styl
@@ -39,7 +39,7 @@ div.goodies
         max-width: 25%
         margin-bottom: 1em
         padding: 1em
-        height: 150px
+        height: 20vmin
         background-size: contain
         background-repeat: no-repeat
         background-position:center
