So... kinda blog?

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -4,6 +4,6 @@ include _common.pug
 body.main
     +nav("Home")
 
-    main.page-content.article.article--md
+    main.page-content.article.blog-post.blog-post--md
         include:markdown-it index.md
 
