--- a/src/templates/_common.pug
+++ b/src/templates/_common.pug
@@ -7,7 +7,7 @@ mixin head(title)
             meta(content="utf-8", http-equiv="encoding")
             if htmlWebpackPlugin.options.inject === false
                 each stylesheet in htmlWebpackPlugin.files.css
-                    link(rel="stylesheet" type="text/css" href=stylesheet)
+                    link(rel="stylesheet" type="text/css" href=`/${stylesheet}`)
 
 mixin inline_style(styles)
     style !{styles.join('')}
@@ -20,6 +20,7 @@ mixin noscript
 -
     var links = [
         {title: "Home", url: "/"},
+        {title: "Blog", url: "/blog/index.html"},
         {title: "Goodies", url: "/goodies.html"},
         {title: "My Waifu", url: "/waifu.html"},
         {title: "Contacts", url: "/contacts.html"},
