--- a/src/templates/_common.pug
+++ b/src/templates/_common.pug
@@ -22,7 +22,7 @@ mixin noscript
         {title: "Home", url: "/"},
         {title: "Blog", url: "/blog/index.html"},
         {title: "Goodies", url: "/goodies.html"},
-        {title: "My Waifu", url: "/waifu.html"},
+        {title: "Gallery", url: "/gallery.html"},
         {title: "Contacts", url: "/contacts.html"},
         {title: "CV", url: "/cv.html"}
     ]
