--- a/src/templates/gallery.pug
+++ b/src/templates/gallery.pug
@@ -11,7 +11,7 @@ include _common.pug
     waifu.push(first);
 
 body.main
-    +nav("My waifu")
+    +nav("Gallery")
 
     main.page-content.im-g
         header(style="margin-bottom: .5em")="This is a catalog of adorable girls.These are the one I shall remember forever..."
