--- a/src/templates/gallery.pug
+++ b/src/templates/gallery.pug
@@ -19,7 +19,7 @@ body.main
             - var cur_idx = idx + 1;
             - var prev_idx = cur_idx === waifu.length ? waifu.length - 1 : cur_idx - 1;
             - var next_idx = cur_idx === waifu.length ? 1 :  cur_idx === (waifu.length - 1) ? "" : cur_idx + 1;
-            - var link = item.link.replace('http', 'https');
+            - var link = item.link.startsWith('https') ? item.link : item.link.replace('http', 'https');
             - var style_inner = util.format("background-image: url('%s')", link);
             - var div_page_class = cur_idx  === waifu.length ? "default target-sub-page target-sub-page--flex" : "target-sub-page target-sub-page--flex";
             div(id=cur_idx class=div_page_class)
