--- a/src/templates/cv.pug
+++ b/src/templates/cv.pug
@@ -48,7 +48,7 @@ body.main
                     - var href = "#" + lang.code;
                     - var icon = require('../assets/img/cv/' + lang.icon);
                     - var lang_icon_style = `background-image: url('${icon}')`
-                    a(href=href title=lang.title  style=lang_icon_style)
+                    a(href=href title=lang.title style=lang_icon_style)
 
 
         each lang in data.langs
@@ -93,32 +93,29 @@ body.main
             section.cv-body__section
                 - var experience = data.elements.experience;
                 +element_title(experience.title)
-                each job_data, job_idx in experience.data
-                    - var toogle_id = `job-${job_idx}`
-                    section.cv-body__section__content
-                        header.cv-body__section__content__title
-                            label.spoiler_link(for=toogle_id)
-                                +element_title3(job_data.title)
-                            each location, lang in job_data.location
-                                p.cv-body__section__content__sub(lang=lang)=location
-                            -
-                                var date_regex = /[^\x00-\x7F]+ [0-9]+/;
-                                var date_split = job_data.dates.en.split('-');
-                                var date_left = new Date("2 " + date_split[0].trim());
-                                var date_right = date_split[1].trim();
-                                date_right = date_right.search(date_regex) === -1 ? new Date() : new Date("2 " + date_right);
-                                var date_diff = utils.get_date_diff(date_left, date_right);
-                            each date, lang in job_data.dates
-                                p.cv-body__section__content__sub(lang=lang)=date + ' ' + utils.get_date_diff_string(date_diff, lang)
-                        input.spoiler-input(id=toogle_id type="checkbox")
-                        ul.spoiler-element
-                            each line in job_data.lines
-                                if line.type == "single_line"
-                                    +li_opt_lang(line)
-                                else if line.type == "multi_line"
-                                    li
-                                        each sub_line in line.lines
-                                            +multi_line(sub_line)
+                section.cv-body__section__content
+                    each job_data, job_idx in experience.data.reverse()
+                        section
+                            - var toogle_id = `job-${job_idx}`
+                                header.cv-body__section__content__title
+                                    label.spoiler_link(for=toogle_id)
+                                        +element_title3(job_data.title)
+                                    each location, lang in job_data.location
+                                        p.cv-body__section__content__sub(lang=lang)=location
+                                    each date, lang in job_data.dates
+                                        p.cv-body__section__content__sub(lang=lang)=date
+
+                                input.spoiler-input(id=toogle_id type="checkbox")
+                                ul.spoiler-element
+                                    each line in job_data.lines
+                                        if line.type == "single_line"
+                                            +li_opt_lang(line)
+                                        else if line.type == "multi_line"
+                                            li
+                                                each sub_line in line.lines
+                                                    +multi_line(sub_line)
+                        if job_idx < (experience.data.length - 1)
+                            br
 
 
             section.cv-body__section
