Update contacts and prefer telegram for CV

--- a/src/templates/contacts.pug
+++ b/src/templates/contacts.pug
@@ -6,11 +6,8 @@ include _common.pug
     var contacts = [
         { title: "douman@gmx.se", href: "mailto:douman@gmx.se", img: require('../assets/img/icons/close-envelope.svg')},
         { title: "Skype: coldgloom", href: "skype:coldgloom?call", img: require('../assets/img/icons/skype.svg')},
+        { title: "Telegram: @DoumanAsh", href: "https://t.me/DoumanAsh", img: require('../assets/img/icons/telegram.svg')},
         { title: "Github", href: "https://github.com/DoumanAsh", img: require('../assets/img/icons/github-logo.svg'), target: "_blank"}
-    ]
-
-    var supports = [
-        { title: "Sponsor via github", href: "https://github.com/sponsors/DoumanAsh", img: 'https://github.com/fluidicon.png', target: "_blank" }
     ]
 
 body.main
@@ -22,9 +19,4 @@ body.main
         div.contant-links
             each contact in contacts
                 a.bk-image.bk-image__link(title=contact.title, href=contact.href, target=contact.target, style=`background-image: url('${contact.img}')`)
-
-        p="Wanna support me?"
-        div.contant-links
-            each support in supports
-                a.bk-image.bk-image__link.bk-image__link--wide(title=support.title, href=support.href, target=support.target, style=`background-image: url('${support.img}')`)
 
